changes for stylox

--- a/src/app/pages/login/login.scss
+++ b/src/app/pages/login/login.scss
@@ -10,6 +10,12 @@
   text-decoration: underline;
   float: right;
 }
+.al-logo {
+  img {
+      width: 300px;
+      height: 140px;
+  }
+}
 .cursor{
   cursor: pointer;
 }
