--- a/src/app/pages/leads/create-leads/create-leads.component.html
+++ b/src/app/pages/leads/create-leads/create-leads.component.html
@@ -1,6 +1,6 @@
 <div *ngIf='showLoader' style="top:65px;bottom:0;left:0;right:0;height:calc(100% - 65px); opacity:0.5;background:gray;z-index:999;position:absolute;">
     <div style="margin:auto;position:fixed;top:50%;left:50%;">
-        <img src="assets/reddyIce/spinner.gif " width='25px'>
+        <img src="assets/crm/spinner.gif " width='25px'>
     </div>
 </div>
 <ba-card cardTitle="{{cardTitle}}" id="newTicket" class="create-notification-screen">
@@ -16,7 +16,7 @@
                 </div>
                 <div class="form-group">
                     <label>Lead Number</label>
-                    <input type='text' placeholder='Lead Number' class='form-control' [disabled]="true" [(ngModel)]="createLead.LeadNo">
+                    <input type='text' class='form-control' [disabled]="true" [(ngModel)]="createLead.LeadNo">
                 </div>
                 <div class="form-group">
                     <label>Lead Source <sup style="color:red;">*</sup></label>
@@ -26,34 +26,38 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>Customer Name <sup style="color:red;">*</sup></label>
-                    <input type='text' placeholder='Customer Name' class='form-control' [disabled]="isViewOnly" [(ngModel)]="createLead.CustomerName">
-                </div>
-                <div class="form-group">
-                    <label>Shop Name <sup style="color:red;">*</sup></label>
-                    <input type='text' placeholder='Shop Name' class='form-control' [disabled]="isViewOnly" [(ngModel)]="createLead.ShopName">
-                </div>
-                <div class="form-group">
-                    <label>Address <sup style="color:red;">*</sup></label>
-                    <input type='text' placeholder='Street Address' class='form-control' [disabled]="isViewOnly" [(ngModel)]="createLead.Address">
-                </div>
-                <div class="form-group">
-                    <label>City <sup style="color:red;">*</sup></label>
-                    <select class="form-control" (change)="refreshDataHandler()" [disabled]="isViewOnly" [(ngModel)]="createLead.City">
-                        <option [value]="0">Select City</option>
-                        <option *ngFor='let city of allCities' [value]="city.CityID">{{city.CityName}}</option>
+                    <label>Priority</label>
+                    <select class="form-control" [disabled]="isViewOnly" [(ngModel)]="createLead.Priority">
+                        <option [value]="2">Low</option>
+                        <option [value]="3">Medium</option>
+                        <option [value]="4">High</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>Comment</label>
-                    <textarea [(ngModel)]="createLead.Comment" placeholder="Write Any Comment Here" class="form-control" [disabled]="isViewOnly"></textarea>
+                    <label>Phone Number <sup style="color:red;">*</sup></label>
+                    <input type='text' class='form-control' [disabled]="isViewOnly" [(ngModel)]="createLead.PhoneNo">
+                </div>
+                <div class="form-group">
+                    <label>Shop Name</label>
+                    <input type='text' class='form-control' [disabled]="isViewOnly" [(ngModel)]="createLead.ShopName">
+                </div>
+                <div class="form-group">
+                    <label>State <sup style="color:red;">*</sup></label>
+                    <select class="form-control" (change)="refreshDataHandler('statechange')" [disabled]="isViewOnly" [(ngModel)]="createLead.State">
+                        <option [value]="0">Select State</option>
+                        <option *ngFor='let state of allState' [value]="state.StatesID">{{state.StateName}}</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>Zip Code</label>
+                    <input type='text' [disabled]="isViewOnly" class='form-control' [(ngModel)]="createLead.ZipCode">
                 </div>
             </div>
             <div class="col-6">
                 <div class="form-group">
-                    <label>Follow Up Date <sup style="color:red;">*</sup></label>
+                    <label>Follow Up Date</label>
                     <div class="form-control">
-                        <date-picker [minDate]="todaysDate" [(dateModel)]="createLead.FollowUpDate" [disabled]="isViewOnly"></date-picker>
+                        <date-picker [minDate]="todaysDate" [(dateModel)]="createLead.FollowUpDate" (dateModelChange)="followUpChangeHandler()" [disabled]="isViewOnly"></date-picker>
                     </div>
                 </div>
                 <div class="form-group">
@@ -65,33 +69,36 @@
                 </div>
                 <div class="form-group">
                     <label>Lead Status <sup style="color:red;">*</sup></label>
-                    <select class="form-control" (change)="refreshDataHandler()" [disabled]="isViewOnly" [(ngModel)]="createLead.LeadStatus">
-                        <option [value]="0">Select Lead Status</option>
-                        <option *ngFor='let status of allStatus' [value]="status.LeadStatusID">{{status.LeadStatus}}</option>
+                    <select class="form-control" (change)="refreshDataHandler()" [disabled]="isViewOnly || disableStatus" [(ngModel)]="createLead.LeadStatus">
+                        <option *ngFor='let status of allStatus' [value]="status.Code">{{status.LeadStatus}}</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>Phone Number <sup style="color:red;">*</sup></label>
-                    <input type='text' placeholder='Phone Number' class='form-control' [disabled]="isViewOnly" [(ngModel)]="createLead.PhoneNo">
+                    <label>Customer Name <sup style="color:red;">*</sup></label>
+                    <input type='text' class='form-control' [disabled]="isViewOnly" [(ngModel)]="createLead.CustomerName">
                 </div>
                 <div class="form-group">
                     <label>Quantity <sup style="color:red;">*</sup></label>
-                    <input type='text' placeholder='Quantity' class='form-control' [disabled]="isViewOnly" [(ngModel)]="createLead.Qunatity">
+                    <input type='text' class='form-control' [disabled]="isViewOnly" [(ngModel)]="createLead.Qunatity">
                 </div>
                 <div class="form-group">
-                    <label>State <sup style="color:red;">*</sup></label>
-                    <select class="form-control" (change)="refreshDataHandler('statechange')" [disabled]="isViewOnly" [(ngModel)]="createLead.State">
-                        <option [value]="0">Select State</option>
-                        <option *ngFor='let state of allState' [value]="state.StatesID">{{state.StateName}}</option>
+                    <label>Address <sup style="color:red;">*</sup></label>
+                    <input type='text' class='form-control' [disabled]="isViewOnly" [(ngModel)]="createLead.Address">
+                </div>
+                <div class="form-group">
+                    <label>City <sup style="color:red;">*</sup></label>
+                    <select class="form-control" (change)="refreshDataHandler()" [disabled]="isViewOnly" [(ngModel)]="createLead.City">
+                        <option [value]="0">Select City</option>
+                        <option *ngFor='let city of allCities' [value]="city.CityID">{{city.CityName}}</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>Zip Code <sup style="color:red;">*</sup></label>
-                    <input type='text' placeholder='Zip Code' [disabled]="isViewOnly" class='form-control' [(ngModel)]="createLead.ZipCode">
+                    <label>Comment</label>
+                    <textarea [(ngModel)]="createLead.Comment" class="form-control" [disabled]="isViewOnly"></textarea>
                 </div>
                 <div class="form-group" *ngIf="(isViewOnly || isEditOnly) && commentList.length">
                     <label>Previous Comments List</label>
-                    <div *ngFor="let val of commentList"></div>
+                    <div *ngFor="let val of commentList; let i=index">{{i+1}}. {{val.Comment}}</div>
                 </div>
             </div>
         </div>
