--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -3,12 +3,12 @@
     <div style="text-align: center; margin-bottom: 25px;">
       <a class="al-logo clearfix">
         <img src="assets/crm/stylox-logo.png">
-        <span class="text-login">(CRM)</span>
+        <span class="text-login"></span>
       </a>
     </div>
     <form [hidden]="!isLoginMode" [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.value)" class="form-horizontal">
       <div class="form-group row" [ngClass]="{'has-error': (!username.valid && username.touched), 'has-success': (username.valid && username.touched)}">
-        <label for="inputEmail3" class="col-sm-4 control-label" translate>Username</label>
+        <label for="inputEmail3" class="col-sm-3 control-label" translate>Username</label>
         <div class="col-sm-8">
           <input [formControl]="username" type="text" class="form-control" id="inputEmail3" placeholder="Username" required>
           <div *ngIf = "!username.valid && username.dirty" class="text-danger">
@@ -17,7 +17,7 @@
 		    </div>
       </div>
       <div class="form-group row" [ngClass]="{'has-error': (!password.valid && password.touched), 'has-success': (password.valid && password.touched)}">
-        <label for="inputPassword3" class="col-sm-4 control-label" translate>Password</label>
+        <label for="inputPassword3" class="col-sm-3 control-label" translate>Password</label>
         <div class="col-sm-8">
           <input [formControl]="password" type="password" class="form-control" id="inputPassword3" placeholder="Password">
         </div>
@@ -27,7 +27,7 @@
       <div class="form-group row" style = "font-size:13px;">
         <div class="offset-sm-4 col-sm-8">
           <button [disabled]="(!loginForm.valid) || isProcessing" type="submit" class="btn btn-default btn-auth" translate>Login</button>
-          <img class="login-loader" [hidden]='!isProcessing' src="assets/reddyIce/spinner.gif " width='25px'>
+          <img class="login-loader" [hidden]='!isProcessing' src="assets/crm/spinner.gif " width='25px'>
         </div>
       </div>
     </form>
