--- a/src/app/theme/components/baPageTop/baPageTop.html
+++ b/src/app/theme/components/baPageTop/baPageTop.html
@@ -12,7 +12,7 @@
 
     <div class="user-icon-container">
         <div class="user-name">
-            <span class="userTextColor">{{userDetails ? userDetails.FirstName : ''}}&nbsp;{{userDetails ? userDetails.LastName : ''}}</span>
+            <span class="userTextColor">{{Name? Name: ''}}</span>
         </div>
         <div class="user-icon">
             <div class="clearfix">
