--- a/src/app/pages/orders/create-order/create-order.component.scss
+++ b/src/app/pages/orders/create-order/create-order.component.scss
@@ -260,6 +260,11 @@ input[type=number]::-webkit-outer-spin-button {
   top: 7px;
   right: 20px;
 }
+.submit-void-order {
+  position: absolute;
+  top: 7px;
+  right: 50px;
+}
 
 /* The switch - the box around the slider */
 .switch {
