--- a/src/app/pages/orders/create-order/create-order.component.scss
+++ b/src/app/pages/orders/create-order/create-order.component.scss
@@ -17,6 +17,9 @@ input[type=number]::-webkit-outer-spin-button {
 .mandatory {
   color: #f11c1c;
 }
+.quantityforsize {
+  width: 55%;
+}
 .btn-placement {
   margin-bottom: 5px;
   margin-right: 5px;
@@ -254,7 +257,14 @@ input[type=number]::-webkit-outer-spin-button {
   top: 7px;
   right: 108px;
 }
-
+.space-between {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.input-width {
+  width: 8%;
+  display: inline-block;
+}
 .submit-create-order {
   position: absolute;
   top: 7px;
